jive/jive.output
Terminals unused in grammar

   FOR
   NIL
   EQU
   AMPERSAND
   ERROR


Grammar

    0 $accept: JiveEnv $end

    1 JiveEnv: Goal

    2 Goal: MainClass Classes

    3 MainClass: CLASS Identifier LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Identifier RPAREN LBRACE Statement RBRACE RBRACE

    4 Classes: Classes Class
    5        | %empty

    6 Class: CLASS Identifier EXTENDS Identifier LBRACE Variables Methods RBRACE
    7      | CLASS Identifier LBRACE Variables Methods RBRACE

    8 Variables: Variables Variable
    9          | %empty

   10 Variable: Type Identifier SEMI

   11 Methods: Methods Method
   12        | %empty

   13 Method: PUBLIC Type Identifier LPAREN Arguments RPAREN LBRACE Variables Statements RETURN Expression SEMI RBRACE

   14 Arguments: RestArguments Argument
   15          | %empty

   16 RestArguments: RestArguments Argument COMMA
   17              | %empty

   18 Argument: Type Identifier

   19 Statements: Statement Statements
   20           | %empty

   21 Statement: LBRACE Statements RBRACE
   22          | IF LPAREN Expression RPAREN Statement ELSE Statement
   23          | WHILE LPAREN Expression RPAREN LBRACE Statements RBRACE
   24          | PRINT LPAREN Expression RPAREN SEMI
   25          | LeftExpression ASSIGN Expression SEMI

   26 CallableExpression: LeftExpression
   27                   | THIS
   28                   | NEW Identifier LPAREN RPAREN

   29 LeftExpression: LeftExpression LBRACKET Expression RBRACKET
   30               | Identifier

   31 Type: INT
   32     | INT LBRACKET RBRACKET
   33     | BOOL
   34     | STRING
   35     | Identifier

   36 Expression: Expression AND Expression
   37           | Expression OR Expression
   38           | Expression LESS Expression
   39           | Expression GREATER Expression
   40           | Expression ADD Expression
   41           | Expression SUB Expression
   42           | Expression MUL Expression
   43           | Expression DIV Expression
   44           | Expression MOD Expression
   45           | Expression DOT LENGTH
   46           | Expression DOT Identifier LPAREN Expressions RPAREN
   47           | NUM
   48           | TRUE
   49           | FALSE
   50           | NEW INT LBRACKET Expression RBRACKET
   51           | NOT Expression
   52           | LPAREN Expression RPAREN
   53           | SUB Expression
   54           | CallableExpression

   55 Expressions: RestExpressions Expression
   56            | %empty

   57 RestExpressions: RestExpressions Expression COMMA
   58                | %empty

   59 Identifier: ID


Terminals, with rules where they appear

$end (0) 0
error (256)
NUM (258) 47
ID (259) 59
STRING (260) 3 34
VOID (261) 3
INT (262) 31 32 50
BOOL (263) 33
CLASS (264) 3 6 7
PUBLIC (265) 3 13
STATIC (266) 3
EXTENDS (267) 6
THIS (268) 27
MAIN (269) 3
IF (270) 22
ELSE (271) 22
WHILE (272) 23
FOR (273)
RETURN (274) 13
NIL (275)
NEW (276) 28 50
LPAREN (277) 3 13 22 23 24 28 46 52
RPAREN (278) 3 13 22 23 24 28 46 52
LBRACE (279) 3 6 7 13 21 23
RBRACE (280) 3 6 7 13 21 23
LBRACKET (281) 3 29 32 50
RBRACKET (282) 3 29 32 50
ASSIGN (283) 25
EQU (284)
ADD (285) 40
SUB (286) 41 53
MUL (287) 42
DIV (288) 43
MOD (289) 44
LESS (290) 38
GREATER (291) 39
TRUE (292) 48
FALSE (293) 49
AND (294) 36
OR (295) 37
NOT (296) 51
COMMA (297) 16 57
DOT (298) 45 46
SEMI (299) 10 13 24 25
AMPERSAND (300)
PRINT (301) 24
LENGTH (302) 45
ERROR (303)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
JiveEnv (50)
    on left: 1, on right: 0
Goal (51)
    on left: 2, on right: 1
MainClass (52)
    on left: 3, on right: 2
Classes (53)
    on left: 4 5, on right: 2 4
Class (54)
    on left: 6 7, on right: 4
Variables (55)
    on left: 8 9, on right: 6 7 8 13
Variable (56)
    on left: 10, on right: 8
Methods (57)
    on left: 11 12, on right: 6 7 11
Method (58)
    on left: 13, on right: 11
Arguments (59)
    on left: 14 15, on right: 13
RestArguments (60)
    on left: 16 17, on right: 14 16
Argument (61)
    on left: 18, on right: 14 16
Statements (62)
    on left: 19 20, on right: 13 19 21 23
Statement (63)
    on left: 21 22 23 24 25, on right: 3 19 22
CallableExpression (64)
    on left: 26 27 28, on right: 54
LeftExpression (65)
    on left: 29 30, on right: 25 26 29
Type (66)
    on left: 31 32 33 34 35, on right: 10 13 18
Expression (67)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54, on right: 13 22 23 24 25 29 36 37 38 39 40 41 42 43 44 45 46
    50 51 52 53 55 57
Expressions (68)
    on left: 55 56, on right: 46
RestExpressions (69)
    on left: 57 58, on right: 55 57
Identifier (70)
    on left: 59, on right: 3 6 7 10 13 18 28 30 35 46


State 0

    0 $accept: . JiveEnv $end

    CLASS  shift, and go to state 1

    JiveEnv    go to state 2
    Goal       go to state 3
    MainClass  go to state 4


State 1

    3 MainClass: CLASS . Identifier LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Identifier RPAREN LBRACE Statement RBRACE RBRACE

    ID  shift, and go to state 5

    Identifier  go to state 6


State 2

    0 $accept: JiveEnv . $end

    $end  shift, and go to state 7


State 3

    1 JiveEnv: Goal .

    $default  reduce using rule 1 (JiveEnv)


State 4

    2 Goal: MainClass . Classes

    $default  reduce using rule 5 (Classes)

    Classes  go to state 8


State 5

   59 Identifier: ID .

    $default  reduce using rule 59 (Identifier)


State 6

    3 MainClass: CLASS Identifier . LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Identifier RPAREN LBRACE Statement RBRACE RBRACE

    LBRACE  shift, and go to state 9


State 7

    0 $accept: JiveEnv $end .

    $default  accept


State 8

    2 Goal: MainClass Classes .
    4 Classes: Classes . Class

    CLASS  shift, and go to state 10

    $default  reduce using rule 2 (Goal)

    Class  go to state 11


State 9

    3 MainClass: CLASS Identifier LBRACE . PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Identifier RPAREN LBRACE Statement RBRACE RBRACE

    PUBLIC  shift, and go to state 12


State 10

    6 Class: CLASS . Identifier EXTENDS Identifier LBRACE Variables Methods RBRACE
    7      | CLASS . Identifier LBRACE Variables Methods RBRACE

    ID  shift, and go to state 5

    Identifier  go to state 13


State 11

    4 Classes: Classes Class .

    $default  reduce using rule 4 (Classes)


State 12

    3 MainClass: CLASS Identifier LBRACE PUBLIC . STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Identifier RPAREN LBRACE Statement RBRACE RBRACE

    STATIC  shift, and go to state 14


State 13

    6 Class: CLASS Identifier . EXTENDS Identifier LBRACE Variables Methods RBRACE
    7      | CLASS Identifier . LBRACE Variables Methods RBRACE

    EXTENDS  shift, and go to state 15
    LBRACE   shift, and go to state 16


State 14

    3 MainClass: CLASS Identifier LBRACE PUBLIC STATIC . VOID MAIN LPAREN STRING LBRACKET RBRACKET Identifier RPAREN LBRACE Statement RBRACE RBRACE

    VOID  shift, and go to state 17


State 15

    6 Class: CLASS Identifier EXTENDS . Identifier LBRACE Variables Methods RBRACE

    ID  shift, and go to state 5

    Identifier  go to state 18


State 16

    7 Class: CLASS Identifier LBRACE . Variables Methods RBRACE

    $default  reduce using rule 9 (Variables)

    Variables  go to state 19


State 17

    3 MainClass: CLASS Identifier LBRACE PUBLIC STATIC VOID . MAIN LPAREN STRING LBRACKET RBRACKET Identifier RPAREN LBRACE Statement RBRACE RBRACE

    MAIN  shift, and go to state 20


State 18

    6 Class: CLASS Identifier EXTENDS Identifier . LBRACE Variables Methods RBRACE

    LBRACE  shift, and go to state 21


State 19

    7 Class: CLASS Identifier LBRACE Variables . Methods RBRACE
    8 Variables: Variables . Variable

    ID      shift, and go to state 5
    STRING  shift, and go to state 22
    INT     shift, and go to state 23
    BOOL    shift, and go to state 24

    $default  reduce using rule 12 (Methods)

    Variable    go to state 25
    Methods     go to state 26
    Type        go to state 27
    Identifier  go to state 28


State 20

    3 MainClass: CLASS Identifier LBRACE PUBLIC STATIC VOID MAIN . LPAREN STRING LBRACKET RBRACKET Identifier RPAREN LBRACE Statement RBRACE RBRACE

    LPAREN  shift, and go to state 29


State 21

    6 Class: CLASS Identifier EXTENDS Identifier LBRACE . Variables Methods RBRACE

    $default  reduce using rule 9 (Variables)

    Variables  go to state 30


State 22

   34 Type: STRING .

    $default  reduce using rule 34 (Type)


State 23

   31 Type: INT .
   32     | INT . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 31

    $default  reduce using rule 31 (Type)


State 24

   33 Type: BOOL .

    $default  reduce using rule 33 (Type)


State 25

    8 Variables: Variables Variable .

    $default  reduce using rule 8 (Variables)


State 26

    7 Class: CLASS Identifier LBRACE Variables Methods . RBRACE
   11 Methods: Methods . Method

    PUBLIC  shift, and go to state 32
    RBRACE  shift, and go to state 33

    Method  go to state 34


State 27

   10 Variable: Type . Identifier SEMI

    ID  shift, and go to state 5

    Identifier  go to state 35


State 28

   35 Type: Identifier .

    $default  reduce using rule 35 (Type)


State 29

    3 MainClass: CLASS Identifier LBRACE PUBLIC STATIC VOID MAIN LPAREN . STRING LBRACKET RBRACKET Identifier RPAREN LBRACE Statement RBRACE RBRACE

    STRING  shift, and go to state 36


State 30

    6 Class: CLASS Identifier EXTENDS Identifier LBRACE Variables . Methods RBRACE
    8 Variables: Variables . Variable

    ID      shift, and go to state 5
    STRING  shift, and go to state 22
    INT     shift, and go to state 23
    BOOL    shift, and go to state 24

    $default  reduce using rule 12 (Methods)

    Variable    go to state 25
    Methods     go to state 37
    Type        go to state 27
    Identifier  go to state 28


State 31

   32 Type: INT LBRACKET . RBRACKET

    RBRACKET  shift, and go to state 38


State 32

   13 Method: PUBLIC . Type Identifier LPAREN Arguments RPAREN LBRACE Variables Statements RETURN Expression SEMI RBRACE

    ID      shift, and go to state 5
    STRING  shift, and go to state 22
    INT     shift, and go to state 23
    BOOL    shift, and go to state 24

    Type        go to state 39
    Identifier  go to state 28


State 33

    7 Class: CLASS Identifier LBRACE Variables Methods RBRACE .

    $default  reduce using rule 7 (Class)


State 34

   11 Methods: Methods Method .

    $default  reduce using rule 11 (Methods)


State 35

   10 Variable: Type Identifier . SEMI

    SEMI  shift, and go to state 40


State 36

    3 MainClass: CLASS Identifier LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING . LBRACKET RBRACKET Identifier RPAREN LBRACE Statement RBRACE RBRACE

    LBRACKET  shift, and go to state 41


State 37

    6 Class: CLASS Identifier EXTENDS Identifier LBRACE Variables Methods . RBRACE
   11 Methods: Methods . Method

    PUBLIC  shift, and go to state 32
    RBRACE  shift, and go to state 42

    Method  go to state 34


State 38

   32 Type: INT LBRACKET RBRACKET .

    $default  reduce using rule 32 (Type)


State 39

   13 Method: PUBLIC Type . Identifier LPAREN Arguments RPAREN LBRACE Variables Statements RETURN Expression SEMI RBRACE

    ID  shift, and go to state 5

    Identifier  go to state 43


State 40

   10 Variable: Type Identifier SEMI .

    $default  reduce using rule 10 (Variable)


State 41

    3 MainClass: CLASS Identifier LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET . RBRACKET Identifier RPAREN LBRACE Statement RBRACE RBRACE

    RBRACKET  shift, and go to state 44


State 42

    6 Class: CLASS Identifier EXTENDS Identifier LBRACE Variables Methods RBRACE .

    $default  reduce using rule 6 (Class)


State 43

   13 Method: PUBLIC Type Identifier . LPAREN Arguments RPAREN LBRACE Variables Statements RETURN Expression SEMI RBRACE

    LPAREN  shift, and go to state 45


State 44

    3 MainClass: CLASS Identifier LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET . Identifier RPAREN LBRACE Statement RBRACE RBRACE

    ID  shift, and go to state 5

    Identifier  go to state 46


State 45

   13 Method: PUBLIC Type Identifier LPAREN . Arguments RPAREN LBRACE Variables Statements RETURN Expression SEMI RBRACE

    RPAREN    reduce using rule 15 (Arguments)
    $default  reduce using rule 17 (RestArguments)

    Arguments      go to state 47
    RestArguments  go to state 48


State 46

    3 MainClass: CLASS Identifier LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Identifier . RPAREN LBRACE Statement RBRACE RBRACE

    RPAREN  shift, and go to state 49


State 47

   13 Method: PUBLIC Type Identifier LPAREN Arguments . RPAREN LBRACE Variables Statements RETURN Expression SEMI RBRACE

    RPAREN  shift, and go to state 50


State 48

   14 Arguments: RestArguments . Argument
   16 RestArguments: RestArguments . Argument COMMA

    ID      shift, and go to state 5
    STRING  shift, and go to state 22
    INT     shift, and go to state 23
    BOOL    shift, and go to state 24

    Argument    go to state 51
    Type        go to state 52
    Identifier  go to state 28


State 49

    3 MainClass: CLASS Identifier LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Identifier RPAREN . LBRACE Statement RBRACE RBRACE

    LBRACE  shift, and go to state 53


State 50

   13 Method: PUBLIC Type Identifier LPAREN Arguments RPAREN . LBRACE Variables Statements RETURN Expression SEMI RBRACE

    LBRACE  shift, and go to state 54


State 51

   14 Arguments: RestArguments Argument .
   16 RestArguments: RestArguments Argument . COMMA

    COMMA  shift, and go to state 55

    $default  reduce using rule 14 (Arguments)


State 52

   18 Argument: Type . Identifier

    ID  shift, and go to state 5

    Identifier  go to state 56


State 53

    3 MainClass: CLASS Identifier LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Identifier RPAREN LBRACE . Statement RBRACE RBRACE

    ID      shift, and go to state 5
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58
    LBRACE  shift, and go to state 59
    PRINT   shift, and go to state 60

    Statement       go to state 61
    LeftExpression  go to state 62
    Identifier      go to state 63


State 54

   13 Method: PUBLIC Type Identifier LPAREN Arguments RPAREN LBRACE . Variables Statements RETURN Expression SEMI RBRACE

    $default  reduce using rule 9 (Variables)

    Variables  go to state 64


State 55

   16 RestArguments: RestArguments Argument COMMA .

    $default  reduce using rule 16 (RestArguments)


State 56

   18 Argument: Type Identifier .

    $default  reduce using rule 18 (Argument)


State 57

   22 Statement: IF . LPAREN Expression RPAREN Statement ELSE Statement

    LPAREN  shift, and go to state 65


State 58

   23 Statement: WHILE . LPAREN Expression RPAREN LBRACE Statements RBRACE

    LPAREN  shift, and go to state 66


State 59

   21 Statement: LBRACE . Statements RBRACE

    ID      shift, and go to state 5
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58
    LBRACE  shift, and go to state 59
    PRINT   shift, and go to state 60

    $default  reduce using rule 20 (Statements)

    Statements      go to state 67
    Statement       go to state 68
    LeftExpression  go to state 62
    Identifier      go to state 63


State 60

   24 Statement: PRINT . LPAREN Expression RPAREN SEMI

    LPAREN  shift, and go to state 69


State 61

    3 MainClass: CLASS Identifier LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Identifier RPAREN LBRACE Statement . RBRACE RBRACE

    RBRACE  shift, and go to state 70


State 62

   25 Statement: LeftExpression . ASSIGN Expression SEMI
   29 LeftExpression: LeftExpression . LBRACKET Expression RBRACKET

    LBRACKET  shift, and go to state 71
    ASSIGN    shift, and go to state 72


State 63

   30 LeftExpression: Identifier .

    $default  reduce using rule 30 (LeftExpression)


State 64

    8 Variables: Variables . Variable
   13 Method: PUBLIC Type Identifier LPAREN Arguments RPAREN LBRACE Variables . Statements RETURN Expression SEMI RBRACE

    ID      shift, and go to state 5
    STRING  shift, and go to state 22
    INT     shift, and go to state 23
    BOOL    shift, and go to state 24
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58
    LBRACE  shift, and go to state 59
    PRINT   shift, and go to state 60

    $default  reduce using rule 20 (Statements)

    Variable        go to state 25
    Statements      go to state 73
    Statement       go to state 68
    LeftExpression  go to state 62
    Type            go to state 27
    Identifier      go to state 74


State 65

   22 Statement: IF LPAREN . Expression RPAREN Statement ELSE Statement

    NUM     shift, and go to state 75
    ID      shift, and go to state 5
    THIS    shift, and go to state 76
    NEW     shift, and go to state 77
    LPAREN  shift, and go to state 78
    SUB     shift, and go to state 79
    TRUE    shift, and go to state 80
    FALSE   shift, and go to state 81
    NOT     shift, and go to state 82

    CallableExpression  go to state 83
    LeftExpression      go to state 84
    Expression          go to state 85
    Identifier          go to state 63


State 66

   23 Statement: WHILE LPAREN . Expression RPAREN LBRACE Statements RBRACE

    NUM     shift, and go to state 75
    ID      shift, and go to state 5
    THIS    shift, and go to state 76
    NEW     shift, and go to state 77
    LPAREN  shift, and go to state 78
    SUB     shift, and go to state 79
    TRUE    shift, and go to state 80
    FALSE   shift, and go to state 81
    NOT     shift, and go to state 82

    CallableExpression  go to state 83
    LeftExpression      go to state 84
    Expression          go to state 86
    Identifier          go to state 63


State 67

   21 Statement: LBRACE Statements . RBRACE

    RBRACE  shift, and go to state 87


State 68

   19 Statements: Statement . Statements

    ID      shift, and go to state 5
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58
    LBRACE  shift, and go to state 59
    PRINT   shift, and go to state 60

    $default  reduce using rule 20 (Statements)

    Statements      go to state 88
    Statement       go to state 68
    LeftExpression  go to state 62
    Identifier      go to state 63


State 69

   24 Statement: PRINT LPAREN . Expression RPAREN SEMI

    NUM     shift, and go to state 75
    ID      shift, and go to state 5
    THIS    shift, and go to state 76
    NEW     shift, and go to state 77
    LPAREN  shift, and go to state 78
    SUB     shift, and go to state 79
    TRUE    shift, and go to state 80
    FALSE   shift, and go to state 81
    NOT     shift, and go to state 82

    CallableExpression  go to state 83
    LeftExpression      go to state 84
    Expression          go to state 89
    Identifier          go to state 63


State 70

    3 MainClass: CLASS Identifier LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Identifier RPAREN LBRACE Statement RBRACE . RBRACE

    RBRACE  shift, and go to state 90


State 71

   29 LeftExpression: LeftExpression LBRACKET . Expression RBRACKET

    NUM     shift, and go to state 75
    ID      shift, and go to state 5
    THIS    shift, and go to state 76
    NEW     shift, and go to state 77
    LPAREN  shift, and go to state 78
    SUB     shift, and go to state 79
    TRUE    shift, and go to state 80
    FALSE   shift, and go to state 81
    NOT     shift, and go to state 82

    CallableExpression  go to state 83
    LeftExpression      go to state 84
    Expression          go to state 91
    Identifier          go to state 63


State 72

   25 Statement: LeftExpression ASSIGN . Expression SEMI

    NUM     shift, and go to state 75
    ID      shift, and go to state 5
    THIS    shift, and go to state 76
    NEW     shift, and go to state 77
    LPAREN  shift, and go to state 78
    SUB     shift, and go to state 79
    TRUE    shift, and go to state 80
    FALSE   shift, and go to state 81
    NOT     shift, and go to state 82

    CallableExpression  go to state 83
    LeftExpression      go to state 84
    Expression          go to state 92
    Identifier          go to state 63


State 73

   13 Method: PUBLIC Type Identifier LPAREN Arguments RPAREN LBRACE Variables Statements . RETURN Expression SEMI RBRACE

    RETURN  shift, and go to state 93


State 74

   30 LeftExpression: Identifier .
   35 Type: Identifier .

    ID        reduce using rule 35 (Type)
    $default  reduce using rule 30 (LeftExpression)


State 75

   47 Expression: NUM .

    $default  reduce using rule 47 (Expression)


State 76

   27 CallableExpression: THIS .

    $default  reduce using rule 27 (CallableExpression)


State 77

   28 CallableExpression: NEW . Identifier LPAREN RPAREN
   50 Expression: NEW . INT LBRACKET Expression RBRACKET

    ID   shift, and go to state 5
    INT  shift, and go to state 94

    Identifier  go to state 95


State 78

   52 Expression: LPAREN . Expression RPAREN

    NUM     shift, and go to state 75
    ID      shift, and go to state 5
    THIS    shift, and go to state 76
    NEW     shift, and go to state 77
    LPAREN  shift, and go to state 78
    SUB     shift, and go to state 79
    TRUE    shift, and go to state 80
    FALSE   shift, and go to state 81
    NOT     shift, and go to state 82

    CallableExpression  go to state 83
    LeftExpression      go to state 84
    Expression          go to state 96
    Identifier          go to state 63


State 79

   53 Expression: SUB . Expression

    NUM     shift, and go to state 75
    ID      shift, and go to state 5
    THIS    shift, and go to state 76
    NEW     shift, and go to state 77
    LPAREN  shift, and go to state 78
    SUB     shift, and go to state 79
    TRUE    shift, and go to state 80
    FALSE   shift, and go to state 81
    NOT     shift, and go to state 82

    CallableExpression  go to state 83
    LeftExpression      go to state 84
    Expression          go to state 97
    Identifier          go to state 63


State 80

   48 Expression: TRUE .

    $default  reduce using rule 48 (Expression)


State 81

   49 Expression: FALSE .

    $default  reduce using rule 49 (Expression)


State 82

   51 Expression: NOT . Expression

    NUM     shift, and go to state 75
    ID      shift, and go to state 5
    THIS    shift, and go to state 76
    NEW     shift, and go to state 77
    LPAREN  shift, and go to state 78
    SUB     shift, and go to state 79
    TRUE    shift, and go to state 80
    FALSE   shift, and go to state 81
    NOT     shift, and go to state 82

    CallableExpression  go to state 83
    LeftExpression      go to state 84
    Expression          go to state 98
    Identifier          go to state 63


State 83

   54 Expression: CallableExpression .

    $default  reduce using rule 54 (Expression)


State 84

   26 CallableExpression: LeftExpression .
   29 LeftExpression: LeftExpression . LBRACKET Expression RBRACKET

    LBRACKET  shift, and go to state 71

    $default  reduce using rule 26 (CallableExpression)


State 85

   22 Statement: IF LPAREN Expression . RPAREN Statement ELSE Statement
   36 Expression: Expression . AND Expression
   37           | Expression . OR Expression
   38           | Expression . LESS Expression
   39           | Expression . GREATER Expression
   40           | Expression . ADD Expression
   41           | Expression . SUB Expression
   42           | Expression . MUL Expression
   43           | Expression . DIV Expression
   44           | Expression . MOD Expression
   45           | Expression . DOT LENGTH
   46           | Expression . DOT Identifier LPAREN Expressions RPAREN

    RPAREN   shift, and go to state 99
    ADD      shift, and go to state 100
    SUB      shift, and go to state 101
    MUL      shift, and go to state 102
    DIV      shift, and go to state 103
    MOD      shift, and go to state 104
    LESS     shift, and go to state 105
    GREATER  shift, and go to state 106
    AND      shift, and go to state 107
    OR       shift, and go to state 108
    DOT      shift, and go to state 109


State 86

   23 Statement: WHILE LPAREN Expression . RPAREN LBRACE Statements RBRACE
   36 Expression: Expression . AND Expression
   37           | Expression . OR Expression
   38           | Expression . LESS Expression
   39           | Expression . GREATER Expression
   40           | Expression . ADD Expression
   41           | Expression . SUB Expression
   42           | Expression . MUL Expression
   43           | Expression . DIV Expression
   44           | Expression . MOD Expression
   45           | Expression . DOT LENGTH
   46           | Expression . DOT Identifier LPAREN Expressions RPAREN

    RPAREN   shift, and go to state 110
    ADD      shift, and go to state 100
    SUB      shift, and go to state 101
    MUL      shift, and go to state 102
    DIV      shift, and go to state 103
    MOD      shift, and go to state 104
    LESS     shift, and go to state 105
    GREATER  shift, and go to state 106
    AND      shift, and go to state 107
    OR       shift, and go to state 108
    DOT      shift, and go to state 109


State 87

   21 Statement: LBRACE Statements RBRACE .

    $default  reduce using rule 21 (Statement)


State 88

   19 Statements: Statement Statements .

    $default  reduce using rule 19 (Statements)


State 89

   24 Statement: PRINT LPAREN Expression . RPAREN SEMI
   36 Expression: Expression . AND Expression
   37           | Expression . OR Expression
   38           | Expression . LESS Expression
   39           | Expression . GREATER Expression
   40           | Expression . ADD Expression
   41           | Expression . SUB Expression
   42           | Expression . MUL Expression
   43           | Expression . DIV Expression
   44           | Expression . MOD Expression
   45           | Expression . DOT LENGTH
   46           | Expression . DOT Identifier LPAREN Expressions RPAREN

    RPAREN   shift, and go to state 111
    ADD      shift, and go to state 100
    SUB      shift, and go to state 101
    MUL      shift, and go to state 102
    DIV      shift, and go to state 103
    MOD      shift, and go to state 104
    LESS     shift, and go to state 105
    GREATER  shift, and go to state 106
    AND      shift, and go to state 107
    OR       shift, and go to state 108
    DOT      shift, and go to state 109


State 90

    3 MainClass: CLASS Identifier LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Identifier RPAREN LBRACE Statement RBRACE RBRACE .

    $default  reduce using rule 3 (MainClass)


State 91

   29 LeftExpression: LeftExpression LBRACKET Expression . RBRACKET
   36 Expression: Expression . AND Expression
   37           | Expression . OR Expression
   38           | Expression . LESS Expression
   39           | Expression . GREATER Expression
   40           | Expression . ADD Expression
   41           | Expression . SUB Expression
   42           | Expression . MUL Expression
   43           | Expression . DIV Expression
   44           | Expression . MOD Expression
   45           | Expression . DOT LENGTH
   46           | Expression . DOT Identifier LPAREN Expressions RPAREN

    RBRACKET  shift, and go to state 112
    ADD       shift, and go to state 100
    SUB       shift, and go to state 101
    MUL       shift, and go to state 102
    DIV       shift, and go to state 103
    MOD       shift, and go to state 104
    LESS      shift, and go to state 105
    GREATER   shift, and go to state 106
    AND       shift, and go to state 107
    OR        shift, and go to state 108
    DOT       shift, and go to state 109


State 92

   25 Statement: LeftExpression ASSIGN Expression . SEMI
   36 Expression: Expression . AND Expression
   37           | Expression . OR Expression
   38           | Expression . LESS Expression
   39           | Expression . GREATER Expression
   40           | Expression . ADD Expression
   41           | Expression . SUB Expression
   42           | Expression . MUL Expression
   43           | Expression . DIV Expression
   44           | Expression . MOD Expression
   45           | Expression . DOT LENGTH
   46           | Expression . DOT Identifier LPAREN Expressions RPAREN

    ADD      shift, and go to state 100
    SUB      shift, and go to state 101
    MUL      shift, and go to state 102
    DIV      shift, and go to state 103
    MOD      shift, and go to state 104
    LESS     shift, and go to state 105
    GREATER  shift, and go to state 106
    AND      shift, and go to state 107
    OR       shift, and go to state 108
    DOT      shift, and go to state 109
    SEMI     shift, and go to state 113


State 93

   13 Method: PUBLIC Type Identifier LPAREN Arguments RPAREN LBRACE Variables Statements RETURN . Expression SEMI RBRACE

    NUM     shift, and go to state 75
    ID      shift, and go to state 5
    THIS    shift, and go to state 76
    NEW     shift, and go to state 77
    LPAREN  shift, and go to state 78
    SUB     shift, and go to state 79
    TRUE    shift, and go to state 80
    FALSE   shift, and go to state 81
    NOT     shift, and go to state 82

    CallableExpression  go to state 83
    LeftExpression      go to state 84
    Expression          go to state 114
    Identifier          go to state 63


State 94

   50 Expression: NEW INT . LBRACKET Expression RBRACKET

    LBRACKET  shift, and go to state 115


State 95

   28 CallableExpression: NEW Identifier . LPAREN RPAREN

    LPAREN  shift, and go to state 116


State 96

   36 Expression: Expression . AND Expression
   37           | Expression . OR Expression
   38           | Expression . LESS Expression
   39           | Expression . GREATER Expression
   40           | Expression . ADD Expression
   41           | Expression . SUB Expression
   42           | Expression . MUL Expression
   43           | Expression . DIV Expression
   44           | Expression . MOD Expression
   45           | Expression . DOT LENGTH
   46           | Expression . DOT Identifier LPAREN Expressions RPAREN
   52           | LPAREN Expression . RPAREN

    RPAREN   shift, and go to state 117
    ADD      shift, and go to state 100
    SUB      shift, and go to state 101
    MUL      shift, and go to state 102
    DIV      shift, and go to state 103
    MOD      shift, and go to state 104
    LESS     shift, and go to state 105
    GREATER  shift, and go to state 106
    AND      shift, and go to state 107
    OR       shift, and go to state 108
    DOT      shift, and go to state 109


State 97

   36 Expression: Expression . AND Expression
   37           | Expression . OR Expression
   38           | Expression . LESS Expression
   39           | Expression . GREATER Expression
   40           | Expression . ADD Expression
   41           | Expression . SUB Expression
   42           | Expression . MUL Expression
   43           | Expression . DIV Expression
   44           | Expression . MOD Expression
   45           | Expression . DOT LENGTH
   46           | Expression . DOT Identifier LPAREN Expressions RPAREN
   53           | SUB Expression .

    MUL  shift, and go to state 102
    DIV  shift, and go to state 103
    MOD  shift, and go to state 104
    DOT  shift, and go to state 109

    $default  reduce using rule 53 (Expression)


State 98

   36 Expression: Expression . AND Expression
   37           | Expression . OR Expression
   38           | Expression . LESS Expression
   39           | Expression . GREATER Expression
   40           | Expression . ADD Expression
   41           | Expression . SUB Expression
   42           | Expression . MUL Expression
   43           | Expression . DIV Expression
   44           | Expression . MOD Expression
   45           | Expression . DOT LENGTH
   46           | Expression . DOT Identifier LPAREN Expressions RPAREN
   51           | NOT Expression .

    ADD      shift, and go to state 100
    SUB      shift, and go to state 101
    MUL      shift, and go to state 102
    DIV      shift, and go to state 103
    MOD      shift, and go to state 104
    LESS     shift, and go to state 105
    GREATER  shift, and go to state 106
    DOT      shift, and go to state 109

    $default  reduce using rule 51 (Expression)


State 99

   22 Statement: IF LPAREN Expression RPAREN . Statement ELSE Statement

    ID      shift, and go to state 5
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58
    LBRACE  shift, and go to state 59
    PRINT   shift, and go to state 60

    Statement       go to state 118
    LeftExpression  go to state 62
    Identifier      go to state 63


State 100

   40 Expression: Expression ADD . Expression

    NUM     shift, and go to state 75
    ID      shift, and go to state 5
    THIS    shift, and go to state 76
    NEW     shift, and go to state 77
    LPAREN  shift, and go to state 78
    SUB     shift, and go to state 79
    TRUE    shift, and go to state 80
    FALSE   shift, and go to state 81
    NOT     shift, and go to state 82

    CallableExpression  go to state 83
    LeftExpression      go to state 84
    Expression          go to state 119
    Identifier          go to state 63


State 101

   41 Expression: Expression SUB . Expression

    NUM     shift, and go to state 75
    ID      shift, and go to state 5
    THIS    shift, and go to state 76
    NEW     shift, and go to state 77
    LPAREN  shift, and go to state 78
    SUB     shift, and go to state 79
    TRUE    shift, and go to state 80
    FALSE   shift, and go to state 81
    NOT     shift, and go to state 82

    CallableExpression  go to state 83
    LeftExpression      go to state 84
    Expression          go to state 120
    Identifier          go to state 63


State 102

   42 Expression: Expression MUL . Expression

    NUM     shift, and go to state 75
    ID      shift, and go to state 5
    THIS    shift, and go to state 76
    NEW     shift, and go to state 77
    LPAREN  shift, and go to state 78
    SUB     shift, and go to state 79
    TRUE    shift, and go to state 80
    FALSE   shift, and go to state 81
    NOT     shift, and go to state 82

    CallableExpression  go to state 83
    LeftExpression      go to state 84
    Expression          go to state 121
    Identifier          go to state 63

